# SnapRS

./: .gitignore  Cargo.toml  README.md  config.default.toml  run.sh
.cargo/: config.toml
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs  packets.rs
src/: config.rs  main.rs
src/network/: connection.rs  mod.rs  network_manager.rs  raw_packet.rs
src/packets/: mod.rs
src/packets/serial/: decode.rs  encode.rs  mod.rs
src/packets/types/: bstring.rs  chat.rs  identifier.rs  mod.rs  varint.rs
src/server/: mod.rs  player.rs
